<resources>
    <string name="app_name">Improve AndroidJ Test</string>
    <string name="edit_full_name_hint">Full name</string>
    <string name="edit_email_hint">Email Address</string>
    <string name="edit_username_hint">Username</string>
    <string name="edit_password_hint">Password</string>
    <string name="edit_birth_hint">Birth</string>
    <string name="send_button">Send button</string>
    <string name="remind_button">Remind Button</string>
    <string name="count_default">0/30</string>
    <string name="fine_choice">Fine choice!
        You\'re gonna love our app!</string>
    <string name="name_error">Enter name, at least 3 letters</string>
    <string name="date_error">Choose birth date</string>
    <string name="email_error">Invalid email address</string>
    <string name="username_error">Enter username, at least 3 letters</string>
    <string name="password_error">Enter password, at least 6 digits</string>
    <string name="email_check">Remind</string>
    <string name="email_check_text">Enter your email for check</string>
    <string name="email_check_error">Enter valid email</string>
    <string name="alert_title">Congratulations!</string>
    <string name="alert_message">You made it!</string>
    <string name="ok_button">OK</string>

</resources>
