<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_16_dp"
            android:layout_marginLeft="@dimen/space_16_dp"
            android:layout_weight="2"
            tools:context="com.mikhail.pankratov.improveandroidjtest.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_for_FAB"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fine_choice_text_size"
                android:textColor="@color/green"
                android:text="@string/fine_choice"
                android:paddingStart="@dimen/space_32_dp"
                android:paddingEnd="@dimen/space_32_dp"
                android:paddingTop="@dimen/space_16_dp"
                android:paddingBottom="@dimen/space_24_dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fields_layout"
                    android:paddingStart="@dimen/space_24_dp"
                    android:paddingEnd="@dimen/space_24_dp"
                    android:paddingTop="@dimen/space_16_dp"
                    android:paddingBottom="@dimen/space_24_dp"
                    android:background="@color/green"
                    android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/edit_full_name_hint"
                android:id="@+id/layout_edit_full_name">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_full_name"
                    style="@style/EditTextInputLayoutStyle"
                    android:inputType="textPersonName"
                    />

            </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_edit_birth_date"
            android:hint="@string/edit_birth_hint"
            style="@style/TextInputLayoutStyle"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_birth_date"
                style="@style/EditTextInputLayoutStyle"
                android:inputType="none"
                android:focusable="false" />

        </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_edit_email"
                style="@style/TextInputLayoutStyle"
                android:hint="@string/edit_email_hint">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_email"
                    android:inputType="textEmailAddress"
                    style="@style/EditTextInputLayoutStyle" />

            </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_edit_username"
            android:hint="@string/edit_username_hint"
            style="@style/TextInputLayoutStyle"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_username"
                style="@style/EditTextInputLayoutStyle"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_edit_password"
                android:hint="@string/edit_password_hint"
                style="@style/TextInputLayoutStyle"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_password"
                    style="@style/EditTextInputLayoutStyle"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    </LinearLayout>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/send_button"
            android:src="@mipmap/ic_launcher"
            android:background="@drawable/rounded_button"
            android:layout_marginRight="@dimen/space_16_dp"
            android:layout_marginEnd="@dimen/space_16_dp"
            android:layout_marginTop="@dimen/space_24_dp"
            app:layout_anchor="@id/layout_for_FAB"
            app:layout_anchorGravity="bottom|right"
            android:contentDescription="@string/send_button" />


    </android.support.design.widget.CoordinatorLayout>

        <RelativeLayout
            android:id="@+id/layProgress"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

        <ProgressBar
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_centerInParent="true"
            android:indeterminate="true"/>

        </RelativeLayout>
    </LinearLayout>